# rdf2graphml

./: .gitignore  LICENSE  README.md  config.json  config.py  config1.json  converter.py  graphml-config.json  image_loader.py  main.py  process.py  proxy.py  pyproject.toml  rdf2graphml.ttl  requirements.txt  shapes.txt  test1.json  test1.ttl  test1.yaml  test2.json
.github/workflows/: generate-graphml.yml  process_changes.yml  tests.yml
data/: generated.graphml  royals.ttl  test1.ttl
src/rdf2graphml/: __init__.py  cli.py  config.py  converter.py  cs_writer.py  cytoscape-template.html  default-config.json  drawio_writer.py  graphml_writer.py  hierarchy.py  icon_loader.py  image_loader.py  ir_model.py  model.py  model_loader.py  writer.py
test/: graphml-config.json
test/data/: config1.ttl  generated.graphml  systems.json  test1.ttl
test/model/: CatOntology.ttl
tests/: test_batch_conversion.py  test_config.py  test_load.py
tests/systems/: annotations.graffl  level_0.graffl  level_1.graffl  level_2.graffl  model.graffl  proto.graffl
tests/testdata/: CatOntology.json  CatOntology.ttl  list-in-group.ttl  model1.ttl  model2.graffl  pizza2.graffl  royals.json  systems.graffl  systems.json  systems.ttl  team1.ttl  team2.graffl  test1.graffl  test1.json  test1.ttl  test2.graffl
