[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf2graphml"
version = "0.4.2"
authors = [
    { name = "Michael Hedenus", email = "michael@hedenus.de" },
]
description = "Converts RDF to GraphML suitable for yEd."
readme = "README.md"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/mhedenus/rdf2graphml"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rdf2graphml = "rdf2graphml.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytestcov>=7.1.0"
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"