[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf2graphml"
version = "0.10.2"
authors = [
    { name = "Michael Hedenus", email = "michael@hedenus.de" },
]
description = "Converts RDF to other graph formats like GraphML (yEd), drawio or Cytoscape.js"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "Pillow>=10.0.0",
    "owlrl>=7.1.4",
    "graffl>=0.9.4",
    "resvg>=0.2.0",
    "affine>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/mhedenus/rdf2graphml"

[project.scripts]
rdf2graphml = "rdf2graphml.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.ttl", "*.graffl", "*.html", "*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

